# pyp-sandbox

./: AUTHORS  ChangeLog  MANIFEST.in  README.md  pip.conf  requirements.txt  setup.cfg  setup.py
pyp-sandbox/: pythontestpackage.py
pypsandbox/: __init__.py  shell.py
