[metadata]
name = pyp-sandbox
summary = Test package for distutils/setuptools/pbr experimentation.
description-file = README.md
author = samstav
author-email = smlstvnh@gmail.com
home-page = https://github.com/smlstvnh/pyp-sandbox
classifier =
    Programming Language :: Python
requires-dist = setuptools

[files]
packages = pypsandbox

[entry_points]
console_scripts =
    pypsandbox = pypsandbox.shell:main

[global]
commands =
    pypsandbox.CustomInstallCommand
    pypsandbox.CustomDevelopCommand

[wheel]
universal = 1

